# Octane

./: App.h  CMakeLists.txt  FileHandle.cpp  FileHandle.h  HttpParser.h  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpTypes.h  LICENSE  README.md  RouteBase.h  Router.h  Trie.h  main.cpp  pages.cpp
examples/01_hello_world/: CMakeLists.txt  app.js  index.html  main.cpp  style.css
examples/02_rest_api/: CMakeLists.txt  main.cpp
include/: App.h  FileHandle.h  HttpParser.h  HttpRequest.h  HttpResponse.h  HttpTypes.h  RouteBase.h  Router.h  Trie.h
json/: parser.cpp
models/: Request.cpp  Response.cpp
src/: FileHandle.cpp
